test/negative/format_no_args.mut
# format() with no arguments — should fail
s := format()
print(s)
